@@ -133,19 +133,15 @@ else
   real_prefix=${prefix}
 fi
 
-AC_DEFINE_UNQUOTED(GNOMECC_ICONS_DIR, "${real_prefix}/share/${PACKAGE}/icons")
+AC_DEFINE_UNQUOTED(GNOMECC_DATA_DIR, "${real_prefix}/share/${PACKAGE}")
 GNOMECC_ICONS_DIR=""${datadir}/${PACKAGE}/icons""
 AC_SUBST(GNOMECC_ICONS_DIR)
-AC_DEFINE_UNQUOTED(GNOMECC_GLADE_DIR, "${real_prefix}/share/${PACKAGE}/interfaces")
+GNOMECC_DESKTOP_DIR=""${datadir}/${PACKAGE}/capplets""
+AC_SUBST(GNOMECC_DESKTOP_DIR)
 GNOMECC_GLADE_DIR=""${datadir}/${PACKAGE}/interfaces""
 AC_SUBST(GNOMECC_GLADE_DIR)
-AC_DEFINE_UNQUOTED(GNOMECC_PIXMAPS_DIR, "${real_prefix}/share/${PACKAGE}/pixmaps")
 GNOMECC_PIXMAPS_DIR=""${datadir}/${PACKAGE}/pixmaps""
 AC_SUBST(GNOMECC_PIXMAPS_DIR)
-AC_DEFINE_UNQUOTED(GNOMECC_DEFAULTS_DIR, "${real_prefix}/share/${PACKAGE}/defaults")
-GNOMECC_DEFAULTS_DIR=""${datadir}/${PACKAGE}/defaults""
-AC_SUBST(GNOMECC_DEFAULTS_DIR)
-AC_DEFINE_UNQUOTED(GNOMECC_SCREENSAVERS_DIR, "${real_prefix}/share/${PACKAGE}/screensavers")
 GNOMECC_SCREENSAVERS_DIR=""${datadir}/${PACKAGE}/screensavers""
 AC_SUBST(GNOMECC_SCREENSAVERS_DIR)
 dnl ==============================================
