@@ -3,6 +3,7 @@
 	* mouse-properties-capplet.c (dialog_button_clicked_cb): Update
 	(main): Use a GtkDialog rather than GnomeDialog; don't place weak
 	ref on gtk_main_quit
+	(load_pixbufs): Locate files with gnome_program_locate_file
 
 2001-12-20  Hans Petter Jansson  <hpj@ximian.com>
 
