@@ -6,6 +6,7 @@
 	(setup_capplet_widget): Don't connect to state_changed_cb
 	(state_changed_cb): Remove
 	(main): Don't pass cap_options
+	(main): Add parameter GNOME_PARAM_APP_DATADIR
 
 2001-12-19  Seth Nickell  <snickell@stanford.edu>
 
