@@ -1,5 +1,9 @@
 2001-12-20  Bradford Hovinen  <hovinen@ximian.com>
 
+	* configure.in (GNOMECC_DESKTOP_DIR): Define
+	(GNOMECC_DATA_DIR): Define
+	Remove AC_DEFINE_UNQUOTED for the rest of the directories
+
 	* schemas/Makefile.am (EXTRA_DIST): Add
 
 	* configure.in: Removed capplets/sound/Makefile
